fixed spacing issues

--- a/src/javascripts/components/welcome/welcome.scss
+++ b/src/javascripts/components/welcome/welcome.scss
@@ -58,7 +58,7 @@
 
 
 .myName{
-  font-size: 100px;
+  font-size: 80px;
 }
 
 .myTitle{
