--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ body {
     font-family: 'Gupter', serif;
     // color: #444544;
     margin: 0;
-
+    padding: 0;
 }
 
 //WELCOME
@@ -21,7 +21,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url("https://images.unsplash.com/photo-1559689031-6edde3cc3d6f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60");
-    min-height: 100%;;
+    min-height: 100%;
 }
 
 // ABOUT
